--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,19 +24,10 @@ a:visited {
 table {
   border-collapse: collapse;
 }
-table tr {
-  border-bottom: 1px solid black;
-}
-table tbody > tr:last-child {
-  border-bottom: none;
-}
+
 table th,
 table td {
-  border-right: 1px solid black;
-}
-table th:last-child,
-table td:last-child {
-  border-right: none;
+  border: 1px solid black;
 }
 
 .color-button {
@@ -93,4 +84,44 @@ table td:last-child {
   font-size: 20px;
   color: #333;
   cursor: pointer;
+}
+
+.drag-button {
+  position: relative;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  color: #333;
+}
+.drag-button > button {
+  position: absolute;
+  border: none;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  cursor: pointer;
+}
+
+tr.drag-over,
+tr.drag-over td {
+  position: relative;
+}
+
+tr.drag-over {
+  &::after {
+    content: "";
+    position: absolute;
+    display: block;
+    background: rgba($color: blue, $alpha: 0.7);
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+  }
+
+  &.dragged::after {
+    background: rgba($color:  gray, $alpha: 0.7);
+  }
 }
