Fix modal appearance

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -52,7 +52,7 @@ table td {
 }
 
 .modal-wrapper {
-  position: absolute;
+  position: fixed;
   align-items: center;
   justify-content: center;
   display: flex;
